@@ -1,11 +1,12 @@
-Mojolicious::Plugin::DBViewerLite
+Mojolicious::Plugin::DBViewer
 
   Mojolicious plugin to display database information on browser.
 
 Features
 
   This module have the following features.
-
+    
+    - Support MySQL and SQLite
     - Display all table names
     - Display show create table
     - Select * from TABLE
